.metadata/.plugins/org.eclipse.cdt.ui/interrupts.build.log
18:53:12 **** Build of configuration Debug for project interrupts ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'preesButton':
../Core/Src/main.c:76:5: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
   76 |     printf ("counter = %d \n \r ",counter);
      |     ^~~~~~
../Core/Src/main.c:76:5: warning: incompatible implicit declaration of built-in function 'printf'
../Core/Src/main.c:21:1: note: include '<stdio.h>' or provide a declaration of 'printf'
   20 | #include "main.h"
  +++ |+#include <stdio.h>
   21 | 
../Core/Src/main.c: In function 'HAL_GPIO_EXTI_Callback':
../Core/Src/main.c:85:6: warning: incompatible implicit declaration of built-in function 'printf'
   85 |      printf ("counter = %d \n \r ",counter);
      |      ^~~~~~
../Core/Src/main.c:85:6: note: include '<stdio.h>' or provide a declaration of 'printf'
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:193:13: error: invalid storage class for function 'MX_USART2_UART_Init'
  193 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:228:13: error: invalid storage class for function 'MX_GPIO_Init'
  228 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:277:1: error: expected declaration or statement at end of input
  277 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:50:13: warning: 'MX_GPIO_Init' used but never defined
   50 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:51:13: warning: 'MX_USART2_UART_Init' used but never defined
   51 | static void MX_USART2_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:268:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  268 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:228:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  228 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:193:13: warning: 'MX_USART2_UART_Init' defined but not used [-Wunused-function]
  193 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:143:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  143 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

18:53:13 Build Failed. 4 errors, 9 warnings. (took 430ms)

